# Tech-challenge-step-1-jd

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
docs/: data_product_canvas.html
src/models/: registry.py
src/notebooks/: eda.ipynb  etapa1_baselines.ipynb  etapa2_experimentos.ipynb
src/service/: mlflow_service.py
