[project]
name = "tech-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick-Covre",email = "p.covredev@gmail.com"},
    {name = "Beatriz-Ferrante",email = "beatriz.ferrante37@gmail.com"},
    {name = "Cecilia-Rocha",email = "ceciliasdrochedo@gmail.com"}
]
requires-python = "3.14"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.18.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
